2008-04-16  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-ghost-pad.c: fix style.

	* src/rbgst.c (Init_gst_classes): fix style.

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-ghost-pad.c, src/rbgst.c: Implement Gst::GhostPad

2008-04-16  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: _raise instead of _bug where appropriate

2008-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* test/test_event.rb: add.

	* src/rbgst-event.c: define class.

	* src/rbgst-event.c: add missing definition.

	* src/rbgst-event.c: fix style.

	* src/rbgst.c (Init_gst_classes):
	- remove a garbage.
	- fix style.

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-event.c, src/rbgst.c, src/rbgst.h, src/rbgstevent.c: Add an
	implementation of Gst::Event

2008-04-15  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgst-x-overlay.c: fix style.

	* src/rbgst-x-overlay.c: fix wrong cast.

	* src/rbgst-x-overlay.c: rename from src/rbgstxoverlay.c.

	* src/rbgst-seek.c: define classes.
	* test/test_seek.rb: add.

	* src/rbgst-seek.c: fix style.

	* src/rbgst.c: fix style.

	* src/rbgst-query.c: fix style.

	* src/rbgst-pipeline.c: rename from src/rbgstpipeline.c.

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgstxoverlay.c: Add Gst::XOverlay#set_xwindow_id_with_buswatch helper
	function. To properly set the xwindow id of an XOverlay one has to listen to
	its messages in sync. This is quite expensive to do in ruby, so do it in a C
	helper

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgstpipeline.c: Fix typo

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-seek.c, src/rbgst.c: Add seek flags and types definitions

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-query.c, src/rbgst.c, src/rbgst.h: Add an implementation of
	Gst::Query

2008-04-15  Sjoerd Simons <sjoerd@luon.net>

	* src/rbgst-element.c: Spawn an extra thread to perform the get_state,
	set_state, query and send_event functions so the ruby interpreter thread c